--- a/app/src/main/res/layout/activity_atools.xml
+++ b/app/src/main/res/layout/activity_atools.xml
@@ -21,4 +21,23 @@
         android:textColor="#000"
         android:textSize="18sp" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button"
+        android:clickable="true"
+        android:drawableLeft="@android:drawable/ic_menu_camera"
+        android:gravity="center_vertical"
+        android:onClick="smsBackup"
+        android:padding="5dp"
+        android:text="短信备份"
+        android:textColor="#000"
+        android:textSize="18sp" />
+
+    <ProgressBar
+        android:id="@+id/pb_progress"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
