--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -36,5 +36,13 @@
         android:id="@+id/sic_location"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <liu.com.mobilesafe.view.SettingItemView
+        android:id="@+id/siv_black_number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        itheima:desc_off="黑名单拦截已经关闭"
+        itheima:desc_on="黑名单拦截已经开启"
+        itheima:title="黑名单拦截设置" />
+
 
 </LinearLayout>
