在高级管理中并把增加了常用电话的查询，其使用的重要的知识点是ExpandableListVew，

--- a/app/src/main/res/layout/activity_atools.xml
+++ b/app/src/main/res/layout/activity_atools.xml
@@ -28,6 +28,19 @@
         android:clickable="true"
         android:drawableLeft="@android:drawable/ic_menu_camera"
         android:gravity="center_vertical"
+        android:onClick="commonNumberQuery"
+        android:padding="5dp"
+        android:text="常用号码查询"
+        android:textColor="#000"
+        android:textSize="18sp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button"
+        android:clickable="true"
+        android:drawableLeft="@android:drawable/ic_menu_camera"
+        android:gravity="center_vertical"
         android:onClick="smsBackup"
         android:padding="5dp"
         android:text="短信备份"
@@ -38,6 +51,7 @@
         android:id="@+id/pb_progress"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
 
 </LinearLayout>
