在高级工具里并把增了程序锁功能，在设置中心新增了程序锁设置功能，但是这两个功能还有一点小 问题，就是有的程序应用程序锁起作用，有的不起作用，这是遇到的最大的困难。

--- a/app/src/main/res/layout/activity_atools.xml
+++ b/app/src/main/res/layout/activity_atools.xml
@@ -53,5 +53,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button"
+        android:clickable="true"
+        android:drawableLeft="@android:drawable/ic_menu_camera"
+        android:gravity="center_vertical"
+        android:onClick="appLock"
+        android:padding="5dp"
+        android:text="程序锁"
+        android:textColor="#000"
+        android:textSize="18sp" />
 
 </LinearLayout>
