--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -44,5 +44,12 @@
         itheima:desc_on="黑名单拦截已经开启"
         itheima:title="黑名单拦截设置" />
 
+    <liu.com.mobilesafe.view.SettingItemView
+        android:id="@+id/siv_app_lock"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        itheima:desc_off="程序锁已经关闭"
+        itheima:desc_on="程序锁已经开启"
+        itheima:title="程序锁设置" />
 
 </LinearLayout>
